@@ -582,6 +582,9 @@ names of constants and types involved. INCOMPATIBILITY.
 
 *** ML ***
 
+* Syntax.pretty_priority (default 0) configures the required priority
+of pretty-printed output and thus affects insertion of parentheses.
+
 * Former exception Library.UnequalLengths now coincides with
 ListPair.UnequalLengths.
 
